--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         Testing git hub commands
         install git
          git version
-         git config --global user.name ",,,,,,,,,,"
+         git config --global user.name ",,,,, give user name,,,,,"
          git config --global user.email "............""
     </body>
 </html>
