added lines in index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
          git version
          git config --global user.name ",,,,, give user name,,,,,"
          git config --global user.email "............""
+         git clone {url}
+         git add {file name} or {* // for all} 
+         git status
+         git commit -m "1st commit"
+         git push
+         git fetch
+         git pull
     </body>
 </html>
