--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         Testing git hub commands
+        //create git repository
         install git
          git version
          git config --global user.name ",,,,, give user name,,,,,"
