--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          git config --global user.name ",,,,, give user name,,,,,"
          git config --global user.email "............""
          git clone {url}
-         git add {file name} or {* // for all} 
+         git add {file name} or {* // for all} .
          git status
          git commit -m "1st commit"
          git push
