--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
          git fetch
          git pull
          //branched indexhtmlchanges
+         //git branch //to check  which branch e are
+         //git branch {branch name} //to add branch
+         // git checkout {branch name} // to shift 1 branch to another
     </body>
 </html>
